# asio2wasapi-monitor

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
apps/control-panel/: Asio2Wasapi.ControlPanel.csproj  DeviceScanner.cs  DriverConfig.cs  DriverInstaller.cs  DriverPaths.cs  IniFile.cs  MainForm.cs  Program.cs
apps/device-list/: main.cpp
docs/: virtual-asio-driver.md
driver/include/: Asio2WasapiDriver.h  AsioInputSource.h  DebugLog.h  DriverConfig.h  DriverDefaults.h  DriverSettings.h  MonoRingBuffer.h  StereoRingBuffer.h  WasapiOutputSink.h
driver/src/: Asio2WasapiCom.cpp  Asio2WasapiDriver.cpp  AsioInputSource.cpp  DebugLog.cpp  DriverConfig.cpp  WasapiOutputSink.cpp  asio2wasapi-virtual-asio.def  dllmain.cpp
release/asio2wasapi-monitor-v0.1.0/: asio2wasapi-monitor.ini
scripts/: register-driver.ps1  unregister-driver.ps1
src/: AudioBridge.cpp  AudioBridge.h  Config.cpp  Config.h  DeviceList.cpp  MonoRingBuffer.h  main.cpp
tools/Asio2Wasapi.ControlPanel/: DriverConfig.cs  MainForm.cs
